--- a/config.env
+++ b/config.env
@@ -1,3 +1,19 @@
-SESSION_ID="levanter_100d48bd41195b4b1987948bf7c75e9ad2"
-VPS="true"
-AUTO_UPDATE="true"
+echo "SESSION_ID = levanter_100d48bd41195b4b1987948bf7c75e9ad2
+PREFIX = ! 
+STICKER_PACKNAME = Nico
+ALWAYS_ONLINE = false
+RMBG_KEY = null
+LANGUAG = en
+WARN_LIMIT = 3
+FORCE_LOGOUT = false
+BRAINSHOP = 159501,6pq8dPiYt7PdqHz3
+MAX_UPLOAD = 200
+REJECT_CALL = false
+SUDO = 27774726523
+TZ = Asia/Kolkata
+VPS = true
+AUTO_STATUS_VIEW = true
+SEND_READ = true
+AJOIN = true
+DISABLE_START_MESSAGE = false
+PERSONAL_MESSAGE = null" > config.env
